[editor canvas] Fix ModuleSearch icon alignment.

--- a/app/src/editor/canvas/components/ModuleSearch.pcss
+++ b/app/src/editor/canvas/components/ModuleSearch.pcss
@@ -106,6 +106,7 @@
   width: calc(2 * var(--iconPadding) + var(--iconSize));
   height: calc(2 * var(--iconPadding) + var(--iconSize));
   padding: var(--iconPadding);
+  margin: calc(-1 * var(--iconPadding));
   line-height: 0;
   flex-shrink: 0;
   z-index: 1; /* ensure over resize control */
